# 2025-sysu-se-proj2

./: LICENSE  README.md  index.html  package.json
docs/: report.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
